2006-04-13 arne

	* new files vstguidebug.cpp/.h
	* bitmaps can be loaded by id or by name now
	* loose focus bugfix (the loose focus message is now propagated throw all parent views as long as the message is not processed)
	* cleaned up mouseOverView code in CFrame/CViewContainer
	* bugfix for CFrame::setSize
	* some bugfixes for CScrollView and CScrollBar
	
2006-01-15 arne

	* Font changes: CFont removed. New CFontDesc class for custom fonts. You need to change all references of CFont to CFontRef.
	* add UTF-8 text drawing with GDI+
	* more doxygen docu

2006-01-06 arne

	* remove old drawing code. VSTGUI draws only when the system calls it to do so.
	* changed CViewContainer addView and removeView to return a bool value
	
2005-12-21 arne

	* new function CDrawContext::scrollRect
	* minor fixes to CScrollView
	* fixed 3D drawing in CParamDisplay (was drawing outside its bounds)

2005-12-19 arne

	* per default USE_NAMESPACE is 1 now if you don't define it
	* some more deprecated functions in CDrawContext
	* moved VSTGUIEditorInterface and CDropTarget into VSTGUI namespace

2005-12-16 arne

	* CControl::getTag() is virtual now
	* fixed some stuff with CDrawContext inside the DEPRECATED functions
	* added some more documentation
	* reorganized GDI+ initialization

2005-12-11 arne

	* moved mouse methods from CDrawContext to CFrame where it makes sense
	* added kDoubleClick to button state, so that you don't need the old way to call waitDoubleClick
	* more GDI+ stuff (it's much faster now)
	* removed tooltip handling
	* added mouse observer interface to CFrame (tooltips could be handled this way in a more generic fashion, see the CTooltipSupport class)
	* renamed CReferenceCounter to CBaseObject and moved the notify method to it
	* reorganized doxygen documentation
	* changed implementation of CView::attached and CView::removed. If you overwrite them, always call the super class implementation also. 